[package]
name = "radio"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_with = { version = "1.4.0", features = ["json"]}
serde_json = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
